--- a/Assessments/pyspark_assessment/pyspark_assessment.ipynb
+++ b/Assessments/pyspark_assessment/pyspark_assessment.ipynb
@@ -16,9 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/14 18:27:44 WARN Utils: Your hostname, Mint-T470 resolves to a loopback address: 127.0.1.1; using 192.168.1.249 instead (on interface wlp4s0)\n",
+      "25/02/14 18:27:45 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/02/14 18:27:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import *\n",
@@ -35,9 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/14 18:28:00 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -70,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +141,7 @@
        " 'years_with_curr_manager']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +173,7 @@
        "1470"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -274,9 +293,7 @@
       "+--------------------+-----+\n",
       "|          department|count|\n",
       "+--------------------+-----+\n",
-      "|               Sales|  446|\n",
       "|Research & Develo...|  961|\n",
-      "|     Human Resources|   63|\n",
       "+--------------------+-----+\n",
       "\n"
      ]
@@ -287,13 +304,15 @@
     "    SELECT department, COUNT(*) as count\n",
     "    FROM table_view\n",
     "    GROUP BY department\n",
+    "    ORDER BY count DESC\n",
+    "    LIMIT 1;\n",
     "\"\"\"\n",
     "spark.sql(most_pop_department).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -329,11 +348,7 @@
       "+---------+-----+\n",
       "|education|count|\n",
       "+---------+-----+\n",
-      "|        1|  170|\n",
       "|        3|  572|\n",
-      "|        5|   48|\n",
-      "|        4|  398|\n",
-      "|        2|  282|\n",
       "+---------+-----+\n",
       "\n"
      ]
@@ -344,6 +359,8 @@
     "    SELECT education, COUNT(*) as count\n",
     "    FROM table_view\n",
     "    GROUP BY education\n",
+    "    ORDER BY COUNT DESC\n",
+    "    LIMIT 1;\n",
     "\"\"\"\n",
     "spark.sql(most_common_lvl_of_edu).show()"
    ]
