--- a/Week 11 - Spark Machine Learning (MLlib)/245010_Spark_ML_Day_2.ipynb
+++ b/Week 11 - Spark Machine Learning (MLlib)/245010_Spark_ML_Day_2.ipynb
@@ -51,18 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/02/20 17:24:32 WARN Utils: Your hostname, Mint-T470 resolves to a loopback address: 127.0.1.1; using 10.46.79.254 instead (on interface wlp4s0)\n",
-      "25/02/20 17:24:32 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "25/02/22 09:53:39 WARN Utils: Your hostname, Mint-T470 resolves to a loopback address: 127.0.1.1; using 192.168.43.179 instead (on interface wlp4s0)\n",
+      "25/02/22 09:53:39 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/20 17:24:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/02/22 09:53:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -77,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "path = \"glassdoor.csv\"\n",
     "\n",
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,9 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -377,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +401,7 @@
        "pyspark.ml.feature.CountVectorizerModel"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,9 +551,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 12:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -650,6 +672,13 @@
       "only showing top 100 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -677,20 +706,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data, test_data = label_data.randomSplit((0.8, 0.2), seed = 42)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -703,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -811,17 +833,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "logist_evaluator = BinaryClassificationEvaluator(\n",
     "    labelCol=\"happiness\",\n",
@@ -834,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -886,10 +900,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "true_positive = logist_pred.filter((F.col(\"happiness\") == 1) & (F.col(\"prediction\") == 1)).count()\n",
+    "true_negative = logist_pred.filter((F.col(\"happiness\") == 0) & (F.col(\"prediction\") == 0)).count()\n",
+    "\n",
+    "false_positive = logist_pred.filter((F.col(\"happiness\") == 0) & (F.col(\"prediction\") == 1)).count()\n",
+    "false_negative = logist_pred.filter((F.col(\"happiness\") == 1) & (F.col(\"prediction\") == 0)).count()\n",
+    "\n",
+    "accuracy = (true_positive+true_negative)/logist_pred.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy of this model is: 0.8108108108108109\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The accuracy of this model is: {accuracy}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -900,9 +939,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(true_positive+true_negative+false_positive+false_negative)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n"
    ]
@@ -944,22 +1011,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Precision is: 0.7692307692307693\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "precision = true_positive / (true_positive + false_positive)\n",
+    "print(f\"The Precision is: {precision}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1012,22 +1078,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Recall is: 0.7142857142857143\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "recall = true_positive/(true_positive+false_negative)\n",
+    "print(f\"The Recall is: {recall}\")\n",
     "\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1078,9 +1146,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The F1 score is: 0.7407407407407408\n"
+     ]
+    }
+   ],
+   "source": [
+    "F1_score = 2 * ((precision*recall)/(precision+recall))\n",
+    "print(f\"The F1 score is: {F1_score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/22 09:54:19 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+---+---------+-----------------+---------+--------------------+----------------+---------+--------------+-------------+-----------------------+------+----------+--------------+--------+--------------------+---------------+-------------+-------------+-----------+------------------+--------+-----------------+-----------------+------------------------+-------------+----------------+-----------------+---------------------+---------------+--------------+------------------+-----------------------+--------------------+--------------------+-------------+\n",
+      "|ReviewId|Age|Attrition|   BusinessTravel|DailyRate|          Department|DistanceFromHome|Education|EducationField|EmployeeCount|EnvironmentSatisfaction|Gender|HourlyRate|JobInvolvement|JobLevel|             JobRole|JobSatisfaction|MaritalStatus|MonthlyIncome|MonthlyRate|NumCompaniesWorked|OverTime|PercentSalaryHike|PerformanceRating|RelationshipSatisfaction|StandardHours|StockOptionLevel|TotalWorkingYears|TrainingTimesLastYear|WorkLifeBalance|YearsAtCompany|YearsInCurrentRole|YearsSinceLastPromotion|YearsWithCurrManager|            Feedback|ReviewDateKey|\n",
+      "+--------+---+---------+-----------------+---------+--------------------+----------------+---------+--------------+-------------+-----------------------+------+----------+--------------+--------+--------------------+---------------+-------------+-------------+-----------+------------------+--------+-----------------+-----------------+------------------------+-------------+----------------+-----------------+---------------------+---------------+--------------+------------------+-----------------------+--------------------+--------------------+-------------+\n",
+      "|     100| 49|       No|Travel_Frequently|      279|Research & Develo...|               8|   Others| Life Sciences|            1|                      3|  Male|        61|             2|       2|  Research Scientist|              2|      Married|         5130|      24907|                 1|      No|               23|                4|                       4|           80|               1|               10|                    3|              3|            10|                 7|                      1|                   7|People are willin...|     20210412|\n",
+      "|     101| 33|       No|Travel_Frequently|     1392|Research & Develo...|               3|   Master| Life Sciences|            1|                      4|Female|        56|             3|       1|  Research Scientist|              3|      Married|         2909|      23159|                 1|     Yes|               11|                3|                       3|           80|               0|                8|                    3|              3|             8|                 7|                      3|                   0|To repeat what I ...|     20210415|\n",
+      "|     102| 27|       No|    Travel_Rarely|      591|Research & Develo...|               2|   Others|       Medical|            1|                      1|  Male|        40|             3|       1|Laboratory Techni...|              2|      Married|         3468|      16632|                 9|      No|               12|                3|                       4|           80|               1|                6|                    3|              3|             2|                 2|                      2|                   2|The variety of di...|     20210524|\n",
+      "|     103| 32|       No|Travel_Frequently|     1005|Research & Develo...|               2|  College| Life Sciences|            1|                      4|  Male|        79|             3|       1|Laboratory Techni...|              4|       Single|         3068|      11864|                 0|      No|               13|                3|                       3|           80|               0|                8|                    2|              2|             7|                 7|                      3|                   6|As youve probably...|     20210514|\n",
+      "|     104| 59|       No|    Travel_Rarely|     1324|Research & Develo...|               3| Bachelor|       Medical|            1|                      3|Female|        81|             4|       1|Laboratory Techni...|              1|      Married|         2670|       9964|                 4|     Yes|               20|                4|                       1|           80|               3|               12|                    3|              2|             1|                 0|                      0|                   0|Great insurance b...|     20210313|\n",
+      "+--------+---+---------+-----------------+---------+--------------------+----------------+---------+--------------+-------------+-----------------------+------+----------+--------------+--------+--------------------+---------------+-------------+-------------+-----------+------------------+--------+-----------------+-----------------+------------------------+-------------+----------------+-----------------+---------------------+---------------+--------------+------------------+-----------------------+--------------------+--------------------+-------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "df.show(5)\n",
