Added Day 2 and renamed notebooks

--- a/Week 8 - Programming for Data Analysis (PySpark)/pyspark_day3.ipynb
+++ b/Week 8 - Programming for Data Analysis (PySpark)/pyspark_day3.ipynb
@@ -2,26 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "\n",
-    "os.environ[\"JAVA_HOME\"] = \"JDK 8\"\n",
+    "os.environ[\"JAVA_HOME\"] = \"../.JDK 8\" \n",
     "os.environ[\"PYSPARK_PYTHON\"] = sys.executable\n",
     "os.environ[\"PYSPARK_DRIVER_PYTHON\"] = sys.executable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, count\n",
+    "from pyspark.sql.functions import  *\n",
     "# from pyspark.sql.types import IntegerType\n",
     "\n",
     "# from pyspark.sql.functions import col\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,16 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output_path = \"/csv_out\"\n",
-    "# df_books.write.csv(output_path, header=True, mode=\"overwrite\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- date: date (nullable = true)\n",
+      " |-- number_of_strikes: integer (nullable = true)\n",
+      " |-- center_point_geom: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_lightning.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,16 +152,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_bydays = df_lightning.groupBy(\"date\").agg(sum(\"number_of_strikes\").alias(\"total_count\")).orderBy(col(\"total_count\").desc())\n"
+    "df_bydays = df_bydays = df_lightning.groupBy(\"date\").agg(sum(\"number_of_strikes\").alias(\"total_count\")).orderBy(col(\"total_count\").desc())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 26:===========================================>              (3 + 1) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+\n",
+      "|      date|total_count|\n",
+      "+----------+-----------+\n",
+      "|2018-08-29|    1070457|\n",
+      "|2018-08-17|     969774|\n",
+      "|2018-08-28|     917199|\n",
+      "|2018-08-27|     824589|\n",
+      "|2018-08-30|     802170|\n",
+      "|2018-08-19|     786225|\n",
+      "|2018-08-18|     741180|\n",
+      "|2018-08-16|     734475|\n",
+      "|2018-08-31|     723624|\n",
+      "|2018-08-15|     673455|\n",
+      "|2018-08-20|     660501|\n",
+      "|2018-08-24|     652101|\n",
+      "|2018-08-21|     575985|\n",
+      "|2018-08-22|     535986|\n",
+      "|2018-08-23|     527955|\n",
+      "|2018-08-25|     512100|\n",
+      "|2018-08-26|     507894|\n",
+      "|2018-06-24|     431587|\n",
+      "|2018-07-23|     423031|\n",
+      "|2018-06-26|     376955|\n",
+      "+----------+-----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_bydays.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -162,20 +229,19 @@
     }
    ],
    "source": [
-    "output_path = \"csv_out\"\n",
-    "df_bydays.write.csv(output_path, header=True)"
+    "df_bydays.toPandas().to_csv(\"lightning_count_by_day.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 76:===========================================>              (3 + 1) / 4]\r"
+      "[Stage 37:===========================================>              (3 + 1) / 4]\r"
      ]
     },
     {
@@ -224,17 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "pandas_df = df_books.toPandas()\n",
@@ -258,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
